<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SplashScreen">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="welcome.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_app"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_app"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:text="@string/by_developer"
        android:textColor="#98FFFFFF"
        android:textSize="12sp" />

</LinearLayout>