<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_reg"
    tools:context=".RecuperarContrasenia">

    <TextView
        android:id="@+id/tvtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/restablecer_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/tvtitulo"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="login2.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        android:layout_centerHorizontal="true"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lottieAnimationView"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:background="@drawable/bg_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/restablecer_subtitulo"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/restablecer_tv"
            android:textStyle="bold"
            android:textSize="16sp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailRecuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/restablecer_hint"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restablecer_guia"
            android:textSize="12sp"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingVertical="12dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/restablecer_btn"
            android:backgroundTint="#E91E36"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/textViewIrLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_IrLogin"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/blue"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>