<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_reg"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_titulo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="travel.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_gravity="center"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:background="@drawable/bg_white"
            >
            <TextView
                android:id="@+id/textViewIngreseDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Registro_ingrese_datos"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_nombre"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <EditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registro_InputNombre"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_apellido"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <EditText
                    android:id="@+id/editTextApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registro_InputApellido"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_correo"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <EditText
                    android:id="@+id/editTextCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registro_InputCorreo"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewContrasenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_contrasenia"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextContrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registro_InputContrasenia"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

<!--            <TextView-->
<!--                android:id="@+id/textViewConfirmarContrasenia"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/registro_confirmar_contrasenia"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_marginTop="15dp"-->
<!--                android:textStyle="bold"/>-->
<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/textInputLayoutConfirmarContrasenia"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="15dp"-->
<!--                android:layout_marginBottom="15dp">-->

<!--                <EditText-->
<!--                    android:id="@+id/editTextConfirmarContrasenia"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/registro_confirmar_contrasenia"-->
<!--                    android:inputType="textPassword"/>-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/registro_registerBtn"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/textViewIrLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_IrLogin"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/blue"
            />




</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>