<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/back_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login2.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/tvtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/login_name"
        android:textColor="#2E77E4"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitulo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:paddingBottom="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/etUser"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingTop="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/blue"
                    android:textColorHighlight="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilUser"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue">

                <EditText
                    android:id="@+id/etPassword"
                    android:autofillHints="password"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:paddingTop="12dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/blue" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilPassword"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"
                android:textColor="#2E77E4" />

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
            android:layout_below="@+id/tvForgetPassword"
            android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
            android:text="@string/login" />

            <Button
                android:id="@+id/btnweb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/btnLogin"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/green"
                android:text="@string/web_page" />

        <LinearLayout
            android:id="@+id/llOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnweb"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="O"
                android:textColor="@color/blue" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/blue" />
        </LinearLayout>

        <!--            <com.google.android.gms.common.SignInButton-->
        <!--                android:id="@+id/btnGoogleSignIn"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="50dp"-->
        <!--                android:layout_below="@id/llOr"-->
        <!--                android:layout_marginTop="15dp"-->
        <!--                app:buttonSize="wide" />-->

        <TextView
                android:id="@+id/tvnewuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:layout_below="@+id/llOr"
                android:text="@string/new_user"
                android:textColor="#2E77E4"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                />
    </RelativeLayout>
</RelativeLayout>